--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     <nav>
 <ul>
 <li><a href="/">Home</a></li>
-<li><a href="#">About</a></li>
+<li><a href="/scuba-diving-guide/">About</a></li>
 <li><a href="#">CV</a></li> 
 </ul>
     </nav>
