--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,8 @@
     <nav>
 <ul>
 <li><a href="/">Home</a></li>
-<li><a href="/scuba-diving-guide/">About</a></li>
-<li><a href="#">CV</a></li> 
+<li><a href="/scuba-diving-guide/about/">About</a></li>
+<li><a href="#">Contact</a></li> 
 </ul>
     </nav>
 <div class="container">
