--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
   <body>
     <nav>
 <ul>
-<li><a href="/">Home</a></li>
+<li><a href="/scuba-diving-guide/">Home</a></li>
 <li><a href="/scuba-diving-guide/about/">About</a></li>
 <li><a href="#">Contact</a></li> 
 </ul>
